--- a/res/layout/fragment_instructions.xml
+++ b/res/layout/fragment_instructions.xml
@@ -15,20 +15,28 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/banner_rojo" />
 
-    <ImageView
-        android:id="@+id/instrucciones_iv_logo"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayoutimagen"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView1"
         android:layout_below="@+id/imageView1"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
-        android:src="@drawable/logo_hazme_el_paro" />
+        android:gravity="center" >
+
+        <ImageView
+            android:id="@+id/instrucciones_iv_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/logo_hazme_el_paro" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/instrucciones_iv_logo"
+        android:layout_below="@+id/linearLayoutimagen"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:text="@string/app_name"
@@ -42,6 +50,7 @@
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
+        android:gravity="center"
         android:text="@string/texto_instrucciones_uno"
         android:textSize="16sp" />
 
@@ -56,18 +65,20 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:scaleType="fitEnd"
-            android:layout_height="wrap_content"
             android:src="@drawable/ic_launcher_numero_1" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="0dp"
-            android:layout_weight=".5"
             android:layout_height="match_parent"
+            android:layout_weight=".5"
             android:gravity="center_vertical"
-            android:text="@string/texto_numero_1" />
+            android:text="@string/texto_numero_1"
+            android:textColor="@color/color_negro"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -80,18 +91,20 @@
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:scaleType="fitEnd"
-            android:layout_height="wrap_content"
             android:src="@drawable/ic_launcher_numero_2" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="0dp"
-            android:layout_weight=".5"
             android:layout_height="match_parent"
+            android:layout_weight=".5"
             android:gravity="center_vertical"
-            android:text="@string/texto_numero_2" />
+            android:text="@string/texto_numero_2"
+            android:textColor="@color/color_negro"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -99,30 +112,37 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/linearLayout2"
         android:layout_below="@+id/linearLayout2"
-                android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true" >
 
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:scaleType="fitEnd"
-            android:layout_height="wrap_content"
             android:src="@drawable/ic_launcher_numero_3" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="0dp"
-            android:layout_weight=".5"
             android:layout_height="match_parent"
+            android:layout_weight=".5"
             android:gravity="center_vertical"
-            android:text="@string/texto_numero_3" />
+            android:text="@string/texto_numero_3"
+            android:textColor="@color/color_negro"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/btn_continuar" />
+        android:layout_alignRight="@+id/textView1"
+        android:background="@drawable/selector_btn_generic"
+        android:gravity="center"
+        android:text="@string/btn_continuar"
+        android:textColor="@drawable/selector_txt_boton_redondo" />
+
 </RelativeLayout>
