--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="color_rojo">#ff5000</color>
     <color name="color_gris">#dbdcde</color>
     <color name="color_negro">#000000</color>
+     <color name="color_blanco">#ffffff</color>
 
 </resources>
