se hace diseño vista contacto de emergencia

--- a/res/layout/fragment_instructions.xml
+++ b/res/layout/fragment_instructions.xml
@@ -134,7 +134,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/instrucciones_btn_siguiente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
