--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="color_rojo">#ff5000</color>
     <color name="color_gris">#dbdcde</color>
     <color name="color_negro">#000000</color>
-     <color name="color_blanco">#ffffff</color>
+    <color name="color_blanco">#ffffff</color>
+    <color name="color_transparente">#00000000</color>
 
 </resources>
