--- a/app/src/main/res/layout/activity_facebooklogin.xml
+++ b/app/src/main/res/layout/activity_facebooklogin.xml
@@ -3,23 +3,41 @@
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_base"
-    android:orientation="vertical" >
+    android:background="@color/color_blanco"
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
         android:layout_weight=".1"
-        android:gravity="center"
-        android:padding="10dp"
-        android:src="@drawable/ic_launcher" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/pager_dialog"
+            android:layout_width="0dp"
+            android:layout_weight=".5"
+            android:layout_height="match_parent"
+            android:gravity="center|right"
+            android:padding="10dp"
+            android:text="@string/app_name"
+            android:textColor="@color/color_negro" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight=".5"
+            android:layout_height="wrap_content"
+            android:gravity="center|left"
+            android:scaleType="fitStart"
+            android:src="@drawable/ic_launcher" />
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".7"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/pager_dialog"
@@ -36,7 +54,7 @@
             android:layout_marginBottom="25dp"
             android:layout_weight=".5"
             android:gravity="bottom"
-            android:paddingTop="10dp" >
+            android:paddingTop="10dp">
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -50,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center|left"
+                android:paddingBottom="5dp"
                 android:text="@string/gracias_por_compartir_banda" />
         </LinearLayout>
     </LinearLayout>
@@ -59,7 +78,7 @@
         android:layout_height="0dp"
         android:layout_weight=".2"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <com.facebook.widget.LoginButton
             android:id="@+id/fb_login_button"
