--- a/app/src/main/res/layout/activity_facebooklogin.xml
+++ b/app/src/main/res/layout/activity_facebooklogin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_blanco"
@@ -13,7 +14,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/pager_dialog"
+            android:id="@+id/texto"
             android:layout_width="0dp"
             android:layout_weight=".5"
             android:layout_height="match_parent"
@@ -61,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="fitStart"
-                android:src="@drawable/ic_launcher_saefubus_banderilla" />
+                android:src="@drawable/ic_launcher_bandera" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -80,21 +81,20 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <com.facebook.widget.LoginButton
-            android:id="@+id/fb_login_button"
-            android:layout_width="fill_parent"
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="5dp"
-            facebook:confirm_logout="false"
-            facebook:fetch_user_info="true" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp" />
 
-        <com.facebook.widget.LikeView
-            android:id="@+id/facebook_btn_post"
+        <com.facebook.share.widget.LikeView
+            android:id="@+id/like_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button"
-            android:visibility="gone" />
+            android:text="Button" />
+
     </LinearLayout>
 
 </LinearLayout>
