se agrega configuracion personalizada de aviso

--- a/app/src/main/res/layout/activity_contacto.xml
+++ b/app/src/main/res/layout/activity_contacto.xml
@@ -15,6 +15,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_weight="1"
+        android:paddingTop="5dp"
         android:fillViewport="true"
         android:overScrollMode="never"
         android:scrollbars="vertical" >
