--- a/app/src/main/res/layout/activity_facebooklogin.xml
+++ b/app/src/main/res/layout/activity_facebooklogin.xml
@@ -6,32 +6,38 @@
     android:layout_height="match_parent"
     android:background="@color/color_blanco"
     android:orientation="vertical">
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/banner_rojo" />
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".1"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/texto"
-            android:layout_width="0dp"
-            android:layout_weight=".5"
-            android:layout_height="match_parent"
-            android:gravity="center|right"
-            android:padding="10dp"
-            android:text="@string/app_name"
-            android:textColor="@color/color_negro" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView1"
+        android:layout_centerHorizontal="true" >
 
         <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="0dp"
             android:layout_weight=".5"
             android:layout_height="wrap_content"
-            android:gravity="center|left"
-            android:scaleType="fitStart"
-            android:src="@drawable/ic_launcher" />
+            android:scaleType="fitEnd"
+            android:src="@drawable/ic_launcher_numero_3" />
 
-
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5"
+            android:gravity="center_vertical"
+            android:text="@string/texto_numero_3"
+            android:textColor="@color/color_negro"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
